# boilerplates-redis-client

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  docker-compose.yml  env.test.example  pyproject.toml  requirements.txt
boilerplates_redis_client/: __init__.py  client.py
tests/: config.py  conftest.py  test_client.py
